<?xml version="1.0"?>
<package format="2">
  <name>pcl_to_grid_map</name>
  <version>1.6.1</version>
  <description>Conversions between grid maps and Point Cloud Library (PCL) types.</description>
  <maintainer email="emmerich@stanford.edu">Martin Freeman</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="emmerich@stanford.edu">Martin Freeman</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>pcl_ros</depend>
</package>
